# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
golang/day01/: day01.go  go.mod  main.go
golang/day02/: go.mod  main.go
golang/day03/: go.mod  main.go
scripts/: fetch-input.sh  run-all.sh  run-problem.sh
src/: lib.rs
