[package]
name = "aoc"
version = "0.1.0"
authors = ["Eduardo S. <whipshout@gmail.com>"]
description = "Advent of Code 2024 in Rust"
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
regex = "1.11.1"
once_cell = "1.16"
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.21"
itertools = "0.12.0"
hashbrown = "0.15.2"
